--- a/app/main.css
+++ b/app/main.css
@@ -30,13 +30,13 @@ body {
     transition: 0.6s;
 }
 
-.note .task {
+.note .value {
     /* force to use inline-block so that
      it gets minimum height */
     display: inline-block;
 }
 
-.note .delete-note {
+.note .delete {
     float: right;
     padding: 0;
 
@@ -47,6 +47,6 @@ body {
     visibility: hidden;
 }
 
-.note:hover .delete-note {
+.note:hover .delete {
     visibility: visible;
 }
