--- a/app/main.css
+++ b/app/main.css
@@ -1,118 +1,101 @@
 body {
-    background: cornsilk;
-    font-family: "sans-serif";
+  background: cornsilk;
+  font-family: "sans-serif";
 }
 
 .add-note {
-    background-color: #fdfdfd;
-    border: 1px solid #ccc;
+  background-color: #fdfdfd;
+  border: 1px solid #ccc;
 }
 
 .notes {
-    margin: 0.5em;
-    padding-left: 0;
-
-    max-width: 10em;
-    list-style: none;
+  list-style: none;
+  margin: 0.5em;
+  max-width: 10em;
+  padding-left: 0;
 }
 
 .note {
-    margin-bottom: 0.5em;
-    padding: 0.5em;
-
-    background-color: #fdfdfd;
-    box-shadow: 0 0 0.3em 0.03em rgba(0, 0, 0, 0.3);
+  background-color: #fdfdfd;
+  box-shadow: 0 0 0.3em 0.03em rgba(0, 0, 0, 0.3);
+  margin-bottom: 0.5em;
+  padding: 0.5em;
 }
 
 .note:hover {
-    box-shadow: 0 0 0.3em 0.03em rgba(0, 0, 0, 0.7);
-
-    transition: 0.6s;
+  box-shadow: 0 0 0.3em 0.03em rgba(0, 0, 0, 0.7);
+  transition: 0.6s;
 }
 
 .note .value {
-    /* force to use inline-block so that
-     it gets minimum height */
-    display: inline-block;
+
+  /* force to use inline-block so that it gets minimum height */
+  display: inline-block;
 }
 
 .note .delete {
-    float: right;
-    padding: 0;
-
-    background-color: #fdfdfd;
-    border: none;
-
-    cursor: pointer;
-    visibility: hidden;
+  background-color: #fdfdfd;
+  border: none;
+  cursor: pointer;
+  float: right;
+  padding: 0;
+  visibility: hidden;
 }
 
 .note:hover .delete {
-    visibility: visible;
+  visibility: visible;
 }
 
 .lane {
-    display: inline-block;
 
-    margin: 1em;
-
-    background-color:#efefef;
-
-    border: 1px solid #ccc;
-    border-radius: 0.5em;
-
-    min-width: 10em;
-
-    vertical-align: top;
+  background-color: #efefef;
+  border: 1px solid #ccc;
+  border-radius: 0.5em;
+  display: inline-block;
+  margin: 1em;
+  min-width: 10em;
+  vertical-align: top;
 }
 
 .lane-header {
-    overflow: auto;
-
-    padding: 1em;
-
-    color: #efefef;
-    background-color: #333;
-
-    border-top-left-radius: 0.5em;
-    border-top-right-radius: 0.5em;
+  background-color: #333;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+  color: #efefef;
+  overflow: auto;
+  padding: 1em;
 }
 
 .lane-name {
-    float: left;
+  float: left;
 }
 
 .lane-add-note {
-    float: left;
-
-    margin-right: 0.5em;
+  float: left;
+  margin-right: 0.5em;
 }
 
 .lane-delete {
-    float: right;
-
-    margin-left: 0.5em;
-
-    visibility: hidden;
+  float: right;
+  margin-left: 0.5em;
+  visibility: hidden;
 }
 
 .lane-header:hover .lane-delete {
-    visibility: visible;
+  visibility: visible;
 }
 
-.add-lane, .lane-add-note button {
-    cursor: pointer;
-
-    background-color: #fdfdfd;
-    border: 1px solid #ccc;
+.add-lane,
+.lane-add-note button {
+  background-color: #fdfdfd;
+  border: 1px solid #ccc;
+  cursor: pointer;
 }
 
 .lane-delete button {
-    padding: 0;
-
-    cursor: pointer;
-
-    color: white;
-    background-color: rgba(0, 0, 0, 0);
-    border: 0;
+  background-color: rgba(0, 0, 0, 0);
+  border: 0;
+  color: white;
+  cursor: pointer;
+  padding: 0;
 }
